# parquetry

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  coverage.yaml
cli/: Cargo.toml
cli/src/: main.rs
example/: Cargo.toml
example/src/: main.rs  user.rs
example/src/schemas/: user.parquet.txt
lib/: Cargo.toml
lib/src/: error.rs  lib.rs  read.rs  sort.rs  write.rs
sort/: Cargo.toml
sort/src/: lib.rs
test/: .gitignore  Cargo.toml  build.rs
test/src/: lib.rs
test/src/schemas/: nested.parquet.txt  simple.parquet.txt  two_list_levels.parquet.txt
