[workspace]
resolver = "2"
members = [
    "cli",
    "gen",
    "lib",
    "example",
    "sort",
    "test"
]

[workspace.package]
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/parquetry"
homepage = "https://github.com/travisbrown/parquetry"
edition = "2021"
version = "0.14.0"
license-file = "LICENSE"
readme = "README.md"

[workspace.dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
chrono = "0.4"
once_cell = "1"
parquet = "54"
thiserror = "2"
