[workspace]
resolver = "2"
members = ["cli", "gen", "lib", "example", "sort", "test"]

[workspace.package]
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/parquetry"
homepage = "https://github.com/travisbrown/parquetry"
edition = "2021"
version = "0.15.0"
license-file = "LICENSE"
readme = "README.md"

[workspace.dependencies]
bincode = { version = "2", features = ["serde"] }
chrono = "0.4"
parquet = "54"
rocksdb = "0.23"
thiserror = "2"
