[package]
name = "parquetry-cli"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[dependencies]
cli-helpers = "0.1"
parquet = { workspace = true }
parquetry-gen = { path = "../gen/" }
thiserror = { workspace = true }
