[package]
name = "parquetry-example"
version = "0.5.0"
edition = "2021"

[dependencies]
chrono = "0.4"
cli-helpers = "0.1"
lazy_static = "1"
parquet = "48"
parquetry = { path = "../lib/" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[build-dependencies]
parquetry-gen = { path = "../gen/" }

[dev-dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
quickcheck = "1"
tempdir = "0.3"
