[package]
name = "parquetry-example"
version = "0.5.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
cli-helpers = "0.1"
lazy_static = { workspace = true }
parquet = { workspace = true }
parquetry = { path = "../lib/" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[build-dependencies]
parquetry-gen = { path = "../gen/" }

[dev-dependencies]
bincode = { workspace = true }
quickcheck = "1"
tempdir = "0.3"
