[package]
name = "parquetry-example"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[dependencies]
chrono = { workspace = true }
cli-helpers = "0.1"
once_cell = { workspace = true }
parquet = { workspace = true }
parquetry = { path = "../lib/" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[build-dependencies]
parquetry-gen = { path = "../gen/" }

[dev-dependencies]
bincode = { workspace = true }
quickcheck = "1"
tempdir = "0.3"
