[package]
name = "parquetry"
version = "0.5.0"
edition = "2021"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
homepage = "https://github.com/travisbrown/parquetry"
repository = "https://github.com/travisbrown/parquetry"
description = "Runtime library for Parquet code generator"
keywords = ["parquet"]
license-file = "../LICENSE"
readme = "../README.md"

[dependencies]
chrono = "0.4"
parquet = "49"
thiserror = "1"
