[package]
name = "parquetry"
version = "0.8.0"
edition = "2021"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
homepage = "https://github.com/travisbrown/parquetry"
repository = "https://github.com/travisbrown/parquetry"
description = "Runtime library for Parquet code generator"
keywords = ["parquet"]
license-file = "../LICENSE"
readme = "../README.md"

[dependencies]
chrono = { workspace = true }
parquet = { workspace = true }
thiserror = { workspace = true }
