[package]
name = "parquetry"
description = "Runtime library for Parquet code generator"
keywords = ["parquet"]
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[dependencies]
chrono = { workspace = true }
parquet = { workspace = true }
thiserror = { workspace = true }
