[package]
name = "parquetry-sort"
version = "0.4.0"
edition = "2021"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
homepage = "https://github.com/travisbrown/parquetry"
repository = "https://github.com/travisbrown/parquetry"
description = "Runtime library for Parquet code generator"
keywords = ["parquet"]
license-file = "../LICENSE"
readme = "../README.md"

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
chrono = "0.4"
parquet = "47"
parquetry = { version = "0.4.0", path = "../lib/" }
serde = "1"
rocksdb = "0.21"
thiserror = "1"
