[package]
name = "parquetry-sort"
description = "Runtime sorting library for Parquet code generator"
keywords = ["parquet"]
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[dependencies]
bincode = { workspace = true }
chrono = { workspace = true }
parquet = { workspace = true }
parquetry = { version = "0.14.0", path = "../lib/" }
serde = "1"
rocksdb = "0.23"
thiserror = { workspace = true }
