[package]
name = "parquetry-test"
version = "0.4.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1"
parquet = "48"
parquetry = { path = "../lib/" }
parquetry-sort = { path = "../sort/" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[build-dependencies]
parquetry-gen = { path = "../gen/" }

[dev-dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
quickcheck = "1"
tempdir = "0.3"
