[package]
name = "parquetry-test"
version = "0.8.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lazy_static = { workspace = true }
parquet = { workspace = true }
parquetry = { path = "../lib/" }
parquetry-sort = { path = "../sort/" }
serde = { version = "1", features = ["derive"] }
thiserror = { workspace = true }

[build-dependencies]
parquetry-gen = { path = "../gen/" }

[dev-dependencies]
bincode = { workspace = true }
quickcheck = "1"
tempdir = "0.3"
