[package]
name = "parquetry-test"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
parquet = { workspace = true }
parquetry = { path = "../lib/" }
serde = { version = "1", features = ["derive"] }
thiserror = { workspace = true }

[build-dependencies]
parquetry-gen = { path = "../gen/" }

[dev-dependencies]
bincode = { workspace = true }
parquetry-sort = { path = "../sort/" }
quickcheck = "1"
tempfile = "3"
